@@ -22,6 +22,7 @@ eg/result/r2g_en.html
 eg/result/r2g_fr.html
 t/00_loading.t
 t/10_rep2greg.t
+t/12_rep2greg.t
 t/20_greg2rep.t
 t/22_leapyear.t
 t/30_newyearday.t
