@@ -6,6 +6,7 @@ Revision history for Perl extension Date::Convert::French_Rev.
         - test file to check the parameter checks (mistakenly not included in 0.06)
         - a few documentation fixes
         - fix the mojibake bug (similar to RT ticket 100311 for DT::C::FR)
+        - add an alternate API to convert from French Revolutionary to other calendar
 
 0.06  Octidi 18 Brumaire CCXXII, jour de la dentelaire (Friday 2013-11-08, also
       the 214th anniversary of Bonaparte's coup agains the Directorate)
